--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="assets/img/itik draft.png" rel="icon">
+  <link href="Assets/Img/Itik draft.png" rel="icon">
   <link href="assets/img/itik draft.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
